--- a/build.gradle
+++ b/build.gradle
@@ -29,15 +29,19 @@ apply plugin: 'idea'
 
 
 android {
+    compileOptions {
+        sourceCompatibility 1.7
+        targetCompatibility 1.7
+    }
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "game.div.cookiecounter"
+        applicationId "game.div.foradilma"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 17
+        versionName "17.0"
         multiDexEnabled true
 
 
@@ -68,13 +72,32 @@ android {
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/ASL2.0'
         exclude("META-INF/*.kotlin_module") 
-      } 
+      }
+
+
+    signingConfigs {
+        //"%JAVA_HOME%\bin\keytool" -genkey -v -keystore my-release-key.keystore -alias alias_name -keyalg RSA -keysize 2048 -validity 10000
+        //gradle assembleRelease
+
+        release {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+
+            // Optional, specify signing versions used
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
+    }
 
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+			signingConfig signingConfigs.release
+
         }
     }
 
@@ -83,6 +106,9 @@ android {
             jni.srcDirs = ['jniLibs']
         }
     }
+
+
+
 }
 
 dependencies {
