--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ org.gradle.parallel=true
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+RELEASE_STORE_FILE=lib/my-release-key.keystore
+RELEASE_STORE_PASSWORD=marcio
+RELEASE_KEY_ALIAS=foradilma
+RELEASE_KEY_PASSWORD=marcio
