--- a/build.gradle
+++ b/build.gradle
@@ -37,16 +37,16 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "game.div.foradilma"
+        applicationId "game.div.supercovid19"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 17
-        versionName "17.0"
+        versionCode 3
+        versionName "3.0"
         multiDexEnabled true
 
 
         ndk {
-            abiFilters "armeabi-v7a", "x86"
+            abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
         }
         packagingOptions {
             exclude "/lib/arm64-v8a/librealm-jni.so"
@@ -76,7 +76,7 @@ android {
 
 
     signingConfigs {
-        //"%JAVA_HOME%\bin\keytool" -genkey -v -keystore my-release-key.keystore -alias alias_name -keyalg RSA -keysize 2048 -validity 10000
+        //"%JAVA_HOME%\bin\keytool" -genkey -v -keystore supercovid19.keystore -alias coronavirus -keyalg RSA -keysize 2048 -validity 10000
         //gradle assembleRelease
 
         release {
