--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="game.div.corruptpuzzle"
+    package="game.div.monymony"
     android:versionCode="1"
     android:versionName="1.0" >
 
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
+	<uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
+	<uses-permission android:name="android.permission.INTERNET" />
 
 
 
@@ -28,7 +30,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-       <!--  <activity
+        <activity
             android:name="game.div.cookiecounter.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -36,7 +38,7 @@
 				
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </activity> -->
+        </activity>
         <activity
             android:name="game.div.cookiecounter.GameActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
@@ -116,9 +118,9 @@
 
         <meta-data android:name="com.google.android.gms.games.APP_ID"
             android:value="@string/app_id" />
-
-        <meta-data android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+		<meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <meta-data android:value="@string/facebook_app_id" android:name="com.facebook.sdk.ApplicationId"/>
     </application>
